--- a/dosecal/index.html
+++ b/dosecal/index.html
@@ -80,7 +80,7 @@
       width: 100%;
       border-collapse: collapse;
       margin-top: 20px;
-      border: 2px solid #007BFF;
+      border: 2px solid #007BFF; /* Đảm bảo viền màu xanh */
     }
     th, td {
       padding: 12px;
@@ -103,6 +103,37 @@
     }
     .source a:hover {
       text-decoration: underline;
+    }
+    .info-section {
+      margin-top: 40px;
+      padding: 20px;
+      background-color: #f4f6f9;
+      border-radius: 6px;
+    }
+    .info-section h3 {
+      color: #007BFF;
+    }
+    .info-section h4 {
+      color: #007BFF;
+    }
+    #printArea {
+      display: none;
+    }
+    /* Custom Styles for the Print Area */
+    .print-table {
+      width: 100%;
+      border-collapse: collapse;
+      margin-top: 20px;
+      border: 2px solid #007BFF; /* Viền xanh cho bảng */
+    }
+    .print-table th, .print-table td {
+      padding: 12px;
+      text-align: left;
+      border: 1px solid #ddd;
+    }
+    .print-table th {
+      background-color: #007BFF;
+      color: white;
     }
   </style>
 </head>
@@ -178,6 +209,12 @@
       <p><strong>Nguồn trích dẫn:</strong> <a href="https://www.icrp.org/publications" target="_blank">ICRP Publication 103, 2007</a></p>
     </div>
 
+    <!-- Thêm section mới cho giải thích các thông số và CTDIvol -->
+   
+
+    <!-- Phần in báo cáo -->
+    
+
   </section>
 
   <script>
@@ -185,7 +222,6 @@
       const bodyRegion = document.getElementById("bodyRegion").value;
       const kValue = document.getElementById("kValue");
 
-      // Cập nhật giá trị hệ số k theo vùng cơ thể đã chọn
       switch (bodyRegion) {
         case "0.0021":
           kValue.value = "0.0021";  // Đầu
@@ -221,6 +257,22 @@
       const dose = Math.round(dlp * k * 100) / 100;
       resultDiv.textContent = `Liều hiệu dụng ước tính: ${dose} mSv (milisievert)`;
       resultDiv.style.color = "#28a745";
+
+      // Cập nhật thông tin để in báo cáo
+      document.getElementById("printRegion").textContent = document.getElementById("bodyRegion").selectedOptions[0].text;
+      document.getElementById("printK").textContent = k;
+      document.getElementById("printDLP").textContent = dlp;
+      document.getElementById("printDose").textContent = dose;
+    }
+
+    function printReport() {
+      const printContent = document.getElementById("printArea");
+      const printWindow = window.open('', '', 'height=600, width=800');
+      printWindow.document.write('<html><head><title>In báo cáo</title></head><body>');
+      printWindow.document.write(printContent.innerHTML);
+      printWindow.document.write('</body></html>');
+      printWindow.document.close();
+      printWindow.print();
     }
   </script>
 
