--- a/dosecal/index.html
+++ b/dosecal/index.html
@@ -206,7 +206,7 @@
     </table>
 
     <div class="source">
-      <p><strong>Nguồn trích dẫn:</strong> <a href="https://www.icrp.org/publications" target="_blank">ICRP Publication 103, 2007</a></p>
+      <p><strong>Nguồn trích dẫn:</strong> <a href="https://www.icrp.org/page.asp?id=5" target="_blank">ICRP Publication 103, 2007</a></p>
     </div>
 
     <!-- Thêm section mới cho giải thích các thông số và CTDIvol -->
