--- a/dosecal/index.html
+++ b/dosecal/index.html
@@ -278,3 +278,232 @@
 
 </body>
 </html>
+
+<!DOCTYPE html>
+<html lang="vi">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Liều bức xạ hiệu dụng từ các kỹ thuật X-quang và CT</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      background: #f4f6f9;
+      margin: 0;
+      padding: 20px;
+    }
+    header {
+      background-color: #007BFF;
+      color: white;
+      padding: 20px 0;
+      text-align: center;
+      margin-bottom: 20px;
+ width: 100%; /* Chiếm toàn bộ chiều rộng */
+    max-width: 950px; /* Giới hạn chiều rộng như bảng */
+    margin: 0 auto; /* Căn giữa */
+    border-radius: 6px;
+    }
+    header h1 {
+      margin: 0;
+      font-size: 28px;
+    }
+    header p {
+      font-size: 16px;
+      margin-top: 10px;
+    }
+    section {
+      max-width: 920px;
+      margin: auto;
+      background: #fff;
+      padding: 30px 20px;
+      border-radius: 12px;
+      box-shadow: 0 4px 12px rgba(0,0,0,0.1);
+    }
+    table {
+      width: 100%;
+      border-collapse: collapse;
+      margin-top: 20px;
+      border: 2px solid #007BFF; /* Viền xanh cho bảng */
+    }
+    th, td {
+      padding: 12px;
+      text-align: left;
+      border: 1px solid #ddd;
+    }
+    th {
+      background-color: #007BFF;
+      color: white;
+    }
+    .source {
+      font-size: 14px;
+      color: #555;
+      margin-top: 20px;
+      text-align: center;
+    }
+    .source a {
+      color: #007BFF;
+      text-decoration: none;
+    }
+    .source a:hover {
+      text-decoration: underline;
+    }
+  </style>
+</head>
+<body>
+
+  <header>
+    <h1>Thông tin liều bức xạ từ các kỹ thuật X-quang và CT</h1>
+    <p>Thông tin về liều bức xạ cho các kỹ thuật chụp X-quang và CT</p>
+  </header>
+
+  <section>
+    <h3>Liều hiệu dụng trung bình của các kỹ thuật X-quang và CT</h3>
+    <table>
+      <thead>
+        <tr>
+          <th>Kỹ thuật</th>
+          <th>Liều bức xạ hiệu dụng (mSv)</th>
+          <th>Thời gian tương đương bức xạ tự nhiên</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td>CT – Abdomen and Pelvis</td>
+          <td>7.7 mSv</td>
+          <td>2.6 năm</td>
+        </tr>
+        <tr>
+          <td>CT – Abdomen and Pelvis, repeated with and without contrast</td>
+          <td>15.4 mSv</td>
+          <td>5.1 năm</td>
+        </tr>
+        <tr>
+          <td>CT – Colonography</td>
+          <td>6 mSv</td>
+          <td>2 năm</td>
+        </tr>
+        <tr>
+          <td>Intravenous Urogram (IVU)</td>
+          <td>3 mSv</td>
+          <td>1 năm</td>
+        </tr>
+        <tr>
+          <td>Barium Enema (Lower GI X-ray)</td>
+          <td>6 mSv</td>
+          <td>2 năm</td>
+        </tr>
+        <tr>
+          <td>Upper GI Study With Barium</td>
+          <td>6 mSv</td>
+          <td>2 năm</td>
+        </tr>
+        <tr>
+          <td>Lumbar Spine</td>
+          <td>1.4 mSv</td>
+          <td>6 tháng</td>
+        </tr>
+        <tr>
+          <td>Extremity (hand, foot, etc.) X-ray</td>
+          <td>< 0.001 mSv</td>
+          <td>< 3 giờ</td>
+        </tr>
+        <tr>
+          <td>CT – Brain</td>
+          <td>1.6 mSv</td>
+          <td>7 tháng</td>
+        </tr>
+        <tr>
+          <td>CT – Brain, repeated with and without contrast</td>
+          <td>3.2 mSv</td>
+          <td>13 tháng</td>
+        </tr>
+        <tr>
+          <td>CT – Head and Neck</td>
+          <td>1.2 mSv</td>
+          <td>5 tháng</td>
+        </tr>
+        <tr>
+          <td>CT – Spine</td>
+          <td>8.8 mSv</td>
+          <td>3 năm</td>
+        </tr>
+        <tr>
+          <td>CT – Chest</td>
+          <td>6.1 mSv</td>
+          <td>2 năm</td>
+        </tr>
+        <tr>
+          <td>CT – Lung Cancer Screening</td>
+          <td>1.5 mSv</td>
+          <td>6 tháng</td>
+        </tr>
+        <tr>
+          <td>Chest X-ray</td>
+          <td>0.1 mSv</td>
+          <td>10 ngày</td>
+        </tr>
+        <tr>
+          <td>Dental X-ray</td>
+          <td>0.005 mSv</td>
+          <td>1 ngày</td>
+        </tr>
+        <tr>
+          <td>Panoramic X-Ray</td>
+          <td>0.025 mSv</td>
+          <td>3 ngày</td>
+        </tr>
+        <tr>
+          <td>Cone Beam CT</td>
+          <td>0.18 mSv</td>
+          <td>22 ngày</td>
+        </tr>
+        <tr>
+          <td>Coronary CT Angiography (CTA)</td>
+          <td>8.7 mSv</td>
+          <td>3 năm</td>
+        </tr>
+        <tr>
+          <td>Cardiac CT for Calcium Scoring</td>
+          <td>1.7 mSv</td>
+          <td>6 tháng</td>
+        </tr>
+        <tr>
+          <td>Non-Cardiac CT Angiography (CTA)</td>
+          <td>5.1 mSv</td>
+          <td>< 2 năm</td>
+        </tr>
+        <tr>
+          <td>Bone Densitometry (DEXA)</td>
+          <td>0.001 mSv</td>
+          <td>3 giờ</td>
+        </tr>
+        <tr>
+          <td>Positron Emission Tomography — Computed Tomography (PET/CT)</td>
+          <td>22.7 mSv</td>
+          <td>7.6 năm</td>
+        </tr>
+        <tr>
+          <td>Bone Densitometry (DEXA)</td>
+          <td>0.001 mSv</td>
+          <td>3 giờ</td>
+        </tr>
+        <tr>
+          <td>Screening Digital Mammography</td>
+          <td>0.21 mSv</td>
+          <td>26 ngày</td>
+        </tr>
+        <tr>
+          <td>Screening Digital Breast Tomosynthesis (3D Mammogram)</td>
+          <td>0.27 mSv</td>
+          <td>33 ngày</td>
+        </tr>
+      </tbody>
+    </table>
+
+    <div class="source">
+      <p><strong>Nguồn trích dẫn:</strong> <a href="https://www.acr.org/Clinical-Resources/Clinical-Tools-and-Reference/radiology-safety/radiation-safety" target="_blank">ACR Radiation Safety</a></p>
+    </div>
+  </section>
+
+</body>
+</html>
