--- a/dosecal/index.html
+++ b/dosecal/index.html
@@ -352,8 +352,7 @@
 <body>
 
   <header>
-    <h1>Thông tin liều bức xạ từ các kỹ thuật X-quang và CT</h1>
-    <p>Thông tin về liều bức xạ cho các kỹ thuật chụp X-quang và CT</p>
+    <h1>Thông tin liều bức xạ trung bình từ các kỹ thuật X-quang và CT</h1>
   </header>
 
   <section>
