--- a/dosecal/index.html
+++ b/dosecal/index.html
@@ -503,6 +503,6 @@
       <p><strong>Nguồn trích dẫn:</strong> <a href="https://www.acr.org/Clinical-Resources/Clinical-Tools-and-Reference/radiology-safety/radiation-safety" target="_blank">ACR Radiation Safety</a></p>
     </div>
   </section>
-
+<script src="https://cdn.counter.dev/script.js" data-id="86e74dda-26a8-41de-99d1-63d0e8fec60e" data-utcoffset="7"></script>
 </body>
 </html>
