--- a/lunglowdose/index.html
+++ b/lunglowdose/index.html
@@ -251,7 +251,43 @@
                 <td>≤ 3.0</td>
                 <td>Áp dụng cho bệnh nhân BMI &lt; 30</td>
             </tr>
-<tr>
+
+<section>
+  <h2>Chỉ số CTDIvol theo cân nặng bệnh nhân</h2>
+  <table style="width: 100%; max-width: 1000px; margin: 20px auto; border-collapse: collapse; border: 2px solid #007BFF;">
+    <thead>
+      <tr style="background-color: #007BFF; color: white;">
+        <th>Đối tượng bệnh nhân</th>
+        <th>Cân nặng xấp xỉ (kg)</th>
+        <th>Cân nặng xấp xỉ (lbs)</th>
+        <th>CTDIvol xấp xỉ (mGy)</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <td>Bệnh nhân nhỏ</td>
+        <td>50–70</td>
+        <td>110–155</td>
+        <td>0.25 – 2.8</td>
+      </tr>
+      <tr>
+        <td>Bệnh nhân trung bình</td>
+        <td>70–90</td>
+        <td>155–200</td>
+        <td>0.5 – 4.3</td>
+      </tr>
+      <tr>
+        <td>Bệnh nhân lớn</td>
+        <td>90–120</td>
+        <td>200–265</td>
+        <td>1.0 – 5.6</td>
+      </tr>
+    </tbody>
+  </table>
+</section>
+
+            
+            <tr>
 <td>American Association of Physicists in Medicine (AAPM)</td>
 <td>≤ 100</td>
 <td>≤ 3.0</td>
