--- a/lunglowdose/index.html
+++ b/lunglowdose/index.html
@@ -125,8 +125,8 @@
 <body>
     <header>
         <h1>
-  TRANG WEB HƯỚNG DẪN TẦM SOÁT UNG THƯ PHỔI BẰNG CT LIỀU THẤP (LDCT)<br>
-  LUNG CANCER SCREENING BY LOW DOSE CT
+  TRANG THÔNG TIN HƯỚNG DẪN TẦM SOÁT UNG THƯ PHỔI BẰNG CT LIỀU THẤP<br>
+  LUNG CANCER SCREENING BY LOW DOSE CT (LDCT)
 </h1>
 
         <p class="subhead">TỔNG HỢP KHUYẾN CÁO - GIỚI HẠN LIỀU KHUYẾN NGHỊ - THÔNG SỐ CÀI ĐẶT</p>
