--- a/lunglowdose/index.html
+++ b/lunglowdose/index.html
@@ -268,7 +268,7 @@
 </section>
 
 <section>
-  <h2>Chỉ số CTDIvol theo cân nặng bệnh nhân</h2>
+  <h2>GIỚI HẠN CTDI vol KHUYẾN NGHỊ THEO CÂN NẶNG</h2>
   <table style="width: 100%; max-width: 1000px; margin: 20px auto; border-collapse: collapse; border: 2px solid #007BFF;">
     <thead>
       <tr style="background-color: #007BFF; color: white;">
