--- a/dosecal/index.html
+++ b/dosecal/index.html
@@ -353,7 +353,7 @@
 <body>
 
   <header>
-    <h1>Thông tin liều bức xạ trung bình từ các kỹ thuật X-quang và CT</h1>
+    <h1>LIỀU HIỆU DỤNG TRUNG BÌNH TỪ CÁC KỸ THUẬT X QUANG VÀ CT</h1>
   </header>
 
   <section>
