--- a/dosecal/index.html
+++ b/dosecal/index.html
@@ -105,44 +105,32 @@
     .source a:hover {
       text-decoration: underline;
     }
-    .info-section {
-      margin-top: 40px;
-      padding: 20px;
-      background-color: #f4f6f9;
-      border-radius: 6px;
-    }
-    .info-section h3 {
-      color: #007BFF;
-    }
-    .info-section h4 {
-      color: #007BFF;
-    }
-    #printArea {
-      display: none;
-    }
-    /* Custom Styles for the Print Area */
-    .print-table {
-      width: 100%;
-      border-collapse: collapse;
-      margin-top: 20px;
-      border: 2px solid #007BFF; /* Viền xanh cho bảng */
-    }
-    .print-table th, .print-table td {
-      padding: 12px;
-      text-align: left;
-      border: 1px solid #ddd;
-    }
-    .print-table th {
+    /* Nút "Trở về trang chủ" */
+    .home-button {
+      display: block;
+      width: 200px;
+      padding: 10px;
       background-color: #007BFF;
       color: white;
+      border: none;
+      border-radius: 6px;
+      text-align: center;
+      font-size: 16px;
+      margin: 30px auto;
+      cursor: pointer;
+      text-decoration: none;
+    }
+
+    .home-button:hover {
+      background-color: #0056b3;
     }
   </style>
 </head>
 <body>
 
   <header>
-    <h1>Công cụ tính liều hiệu dụng từ DLP</h1>
-    <p>Hướng dẫn tính toán liều hiệu dụng từ chỉ số DLP trong CT để giúp đánh giá mức độ bức xạ nhận được</p>
+    <h1>Công cụ tính Liều hiệu dụng (Effective Dose) từ DLP</h1>
+    <p>Hướng dẫn tính toán liều hiệu dụng từ chỉ số DLP trong CT để giúp đánh giá nguy cơ từ bức xạ nhận được</p>
   </header>
 
   <section>
@@ -210,11 +198,8 @@
       <p><strong>Nguồn trích dẫn:</strong> <a href="https://www.icrp.org/page.asp?id=5" target="_blank">ICRP Publication 103, 2007</a></p>
     </div>
 
-    <!-- Thêm section mới cho giải thích các thông số và CTDIvol -->
-   
-
-    <!-- Phần in báo cáo -->
-    
+    <!-- Nút "Trở về trang chủ" -->
+    <a href="/" class="home-button">Trở về trang chủ</a>
 
   </section>
 
@@ -258,28 +243,11 @@
       const dose = Math.round(dlp * k * 100) / 100;
       resultDiv.textContent = `Liều hiệu dụng ước tính: ${dose} mSv (milisievert)`;
       resultDiv.style.color = "#28a745";
-
-      // Cập nhật thông tin để in báo cáo
-      document.getElementById("printRegion").textContent = document.getElementById("bodyRegion").selectedOptions[0].text;
-      document.getElementById("printK").textContent = k;
-      document.getElementById("printDLP").textContent = dlp;
-      document.getElementById("printDose").textContent = dose;
-    }
-
-    function printReport() {
-      const printContent = document.getElementById("printArea");
-      const printWindow = window.open('', '', 'height=600, width=800');
-      printWindow.document.write('<html><head><title>In báo cáo</title></head><body>');
-      printWindow.document.write(printContent.innerHTML);
-      printWindow.document.write('</body></html>');
-      printWindow.document.close();
-      printWindow.print();
     }
   </script>
 
 </body>
 </html>
-
 <!DOCTYPE html>
 <html lang="vi">
 <head>
