--- a/lunglowdose/index.html
+++ b/lunglowdose/index.html
@@ -351,7 +351,7 @@
             <tr><td>Khung chậu</td><td>0.019</td></tr>
         </tbody>
     </table>
-    <p style="text-align:center; font-style:italic; color:#555; margin-top:10px;">Nguồn tham khảo: <a href="https://www.icrp.org/publication.asp?id=ICRP%20Publication%20103" target="_blank" style="color:#007BFF; text-decoration: underline;">ICRP Publication 103</a>, AAPM Report No. 96</p>
+    <p style="text-align:center; font-style:italic; color:#555; margin-top:10px;">Nguồn tham khảo: <a href="https://www.icrp.org/publication.asp?id=ICRP%20Publication%20103%20(Users%20Edition)" target="_blank" style="color:#007BFF; text-decoration: underline;">ICRP Publication 103</a>, AAPM Report No. 96</p>
 </section>
 
 
