--- a/dosecal/index.html
+++ b/dosecal/index.html
@@ -195,11 +195,11 @@
     </table>
 
     <div class="source">
-      <p><strong>Nguồn trích dẫn:</strong> <a href="https://www.icrp.org/page.asp?id=5" target="_blank">ICRP Publication 103, 2007</a></p>
+      <p><strong>Nguồn trích dẫn:</strong> <a href="https://www.icrp.org/publication.asp?id=ICRP%20Publication%20103%20(Users%20Edition)" target="_blank">ICRP Publication 103, 2007</a></p>
     </div>
 
     <!-- Nút "Trở về trang chủ" -->
-    <a href="/" class="home-button">Trở về trang chủ</a>
+    <a href="https://vnrad.tech/lunglowdose/" class="home-button">Trở về trang chủ</a>
 
   </section>
 
