--- a/dosecal/index.html
+++ b/dosecal/index.html
@@ -129,8 +129,8 @@
 <body>
 
   <header>
-    <h1>Công cụ tính Liều hiệu dụng (Effective Dose) từ DLP</h1>
-    <p>Hướng dẫn tính toán liều hiệu dụng từ chỉ số DLP trong CT để giúp đánh giá nguy cơ từ bức xạ nhận được</p>
+    <h1>Công cụ tính liều hiệu dụng từ DLP</h1>
+    <p>Hướng dẫn tính toán liều hiệu dụng từ chỉ số DLP trong CT để giúp đánh giá mức độ bức xạ nhận được</p>
   </header>
 
   <section>
@@ -195,7 +195,7 @@
     </table>
 
     <div class="source">
-      <p><strong>Nguồn trích dẫn:</strong> <a href="https://www.icrp.org/publication.asp?id=ICRP%20Publication%20103%20(Users%20Edition)" target="_blank">ICRP Publication 103, 2007</a></p>
+      <p><strong>Nguồn trích dẫn:</strong> <a href="https://www.icrp.org/page.asp?id=5" target="_blank">ICRP Publication 103, 2007</a></p>
     </div>
 
     <!-- Nút "Trở về trang chủ" -->
@@ -319,6 +319,70 @@
   </style>
 </head>
 <body>
+
+<section style="max-width: 920px; margin: 30px auto; padding: 20px; background-color: #fff; border-radius: 12px; box-shadow: 0 4px 12px rgba(0,0,0,0.1);">
+  <h3 style="text-align: center; color: #007BFF; font-size: 26px;">Giải thích các thông số tính toán liều phơi nhiễm bức xạ trong CT</h3>
+  
+  <p style="font-size: 16px;"><strong>Liều hiệu dụng</strong> (Effective Dose) là một đại lượng dùng để đo lường và đánh giá mức độ nguy hại của bức xạ đối với cơ thể con người sau khi tiếp xúc với bức xạ ion hóa. Nó phản ánh tác động tiềm tàng của bức xạ đến các mô và cơ quan khác nhau trong cơ thể, từ đó giúp ước tính nguy cơ ung thư hay các tác động lâu dài của bức xạ. Liều hiệu dụng tính bằng đơn vị <strong>mSv</strong> (miliSievert), trong đó <strong>1 Sv</strong> tương đương với 1000 mSv.</p>
+
+  <h4 style="color: #007BFF; font-size: 22px;">Công thức tính Liều hiệu dụng (Effective Dose):</h4>
+  <p style="font-size: 18px; background-color: #f4f6f9; padding: 10px; border-radius: 6px; border: 1px solid #007BFF; text-align: center;">
+    E = Σ(D<sub>i</sub> × W<sub>i</sub>)
+  </p>
+  <p style="font-size: 16px;">Trong đó:</p>
+  <ul style="font-size: 16px;">
+    <li><strong>E</strong> là <strong>liều hiệu dụng</strong>.</li>
+    <li><strong>D<sub>i</sub></strong> là <strong>liều bức xạ</strong> nhận được bởi mô <i>i</i> (tính bằng mSv).</li>
+    <li><strong>W<sub>i</sub></strong> là <strong>hệ số trọng lượng mô</strong> (tùy thuộc vào độ nhạy của từng mô đối với bức xạ, như mô xương, mô da, mô gan, v.v.).</li>
+  </ul>
+  <p><em>Hệ số trọng lượng mô</em> giúp tính đến sự khác biệt về độ nhạy của các mô cơ thể đối với bức xạ. Ví dụ, mô xương có độ nhạy cao hơn so với mô cơ, do đó hệ số trọng lượng mô của xương sẽ cao hơn.</p>
+
+  <h4 style="color: #007BFF; font-size: 22px;">Ý nghĩa của Liều hiệu dụng trong chụp CT:</h4>
+  <p style="font-size: 16px;">Trong chụp <strong>CT</strong> (Chụp cắt lớp vi tính), việc sử dụng bức xạ ion hóa có thể dẫn đến những tác động có hại cho cơ thể, vì vậy <strong>liều hiệu dụng</strong> là chỉ số quan trọng giúp xác định mức độ nguy cơ liên quan đến các xét nghiệm chẩn đoán bằng CT. Cụ thể:</p>
+  
+  <ul style="font-size: 16px;">
+    <li><strong>Đánh giá tác động của bức xạ:</strong> Liều hiệu dụng cho phép đánh giá tác động của bức xạ ion hóa đối với toàn bộ cơ thể, không chỉ riêng các mô chịu tác động trực tiếp của bức xạ. Điều này rất quan trọng trong y tế, vì nó giúp bác sĩ đánh giá được mức độ nguy hiểm và hiệu quả của một kỹ thuật chẩn đoán nào đó.</li>
+    <li><strong>Cân bằng lợi ích và rủi ro:</strong> Chụp CT là một công cụ rất hiệu quả trong việc chẩn đoán bệnh, tuy nhiên nó cũng mang lại rủi ro từ bức xạ. Việc tính toán và giám sát <strong>liều hiệu dụng</strong> giúp cân nhắc giữa <strong>lợi ích</strong> (chẩn đoán bệnh chính xác) và <strong>rủi ro</strong> (tác động của bức xạ). Điều này đặc biệt quan trọng đối với các bệnh nhân phải chụp CT nhiều lần hoặc các nhóm đối tượng dễ bị tổn thương như trẻ em.</li>
+    <li><strong>Giới hạn bức xạ:</strong> Liều hiệu dụng cũng là căn cứ để thiết lập các <strong>giới hạn an toàn</strong> cho bức xạ trong các kỹ thuật y tế. Các cơ quan y tế, chẳng hạn như <strong>ICRP</strong> (International Commission on Radiological Protection), đã đưa ra các hướng dẫn để đảm bảo rằng mức độ bức xạ trong chụp CT không vượt quá mức an toàn, nhằm giảm thiểu rủi ro sức khỏe lâu dài cho bệnh nhân.</li>
+    <li><strong>Điều chỉnh liều cho từng bệnh nhân:</strong> Mỗi bệnh nhân có thể có mức độ nhạy cảm với bức xạ khác nhau (tuổi tác, giới tính, loại mô cơ thể). Liều hiệu dụng giúp <strong>tinh chỉnh</strong> các kỹ thuật chụp CT để tối ưu hóa liều bức xạ mà bệnh nhân nhận được, giúp giảm thiểu tác động xấu trong khi vẫn đảm bảo chất lượng hình ảnh.</li>
+  </ul>
+
+  <h4 style="color: #007BFF; font-size: 22px;">Ví dụ minh họa:</h4>
+  <p style="font-size: 16px;">Giả sử một bệnh nhân được chụp CT bụng và chậu, hệ số k cho vùng này là <strong>0.015</strong>, và DLP (Dose-Length Product) là <strong>1500 mGy·cm</strong>. Liều hiệu dụng có thể được tính như sau:</p>
+
+  <p style="font-size: 20px; background-color: #f4f6f9; padding: 10px; border-radius: 6px; border: 1px solid #007BFF; text-align: center;">
+    E = DLP × k = 1500 × 0.015 = 22.5 mSv
+  </p>
+
+  <p style="font-size: 16px;">Điều này có nghĩa là bệnh nhân sẽ nhận một liều bức xạ tương đương với <strong>22.5 mSv</strong>. Thông qua <strong>liều hiệu dụng</strong>, bác sĩ có thể hiểu rõ hơn về tác động của bức xạ đối với bệnh nhân và đưa ra quyết định thích hợp về việc có nên thực hiện thêm xét nghiệm chẩn đoán hay không.</p>
+
+  <h4 style="color: #007BFF; font-size: 22px;">Kết luận:</h4>
+  <p style="font-size: 16px;"><strong>Liều hiệu dụng</strong> trong <strong>chụp CT</strong> là một chỉ số quan trọng giúp đánh giá mức độ nguy hại của bức xạ đối với cơ thể bệnh nhân. Nó giúp <strong>cân bằng lợi ích và rủi ro</strong>, bảo vệ bệnh nhân khỏi những tác động xấu từ bức xạ, đồng thời đảm bảo rằng việc chẩn đoán đạt hiệu quả cao nhất.</p>
+</section>
+
+<section style="max-width: 920px; margin: 30px auto; padding: 20px; background-color: #fff; border-radius: 12px; box-shadow: 0 4px 12px rgba(0,0,0,0.1);">
+  <h3 style="text-align: center; color: #007BFF; font-size: 26px;">Giải thích về nguy cơ ung thư từ liều hiệu dụng trong CT</h3>
+  
+  <p style="font-size: 16px;">Sau khi tính toán <strong>liều hiệu dụng</strong> cho một bệnh nhân từ các phép đo DLP (Dose-Length Product) và hệ số k, mức độ nguy cơ ung thư trong tương lai có thể được ước tính. Tuy nhiên, cần lưu ý rằng nguy cơ này là một yếu tố tiềm tàng và được tính toán dựa trên một số giả định về sự tích tụ của bức xạ và các tác động lâu dài của nó.</p>
+
+  <h4 style="color: #007BFF; font-size: 22px;">Cách tính nguy cơ ung thư từ liều bức xạ:</h4>
+  <p style="font-size: 16px;">Theo các nghiên cứu y khoa, mỗi 1 mSv (miliSievert) bức xạ có thể làm tăng nhẹ nguy cơ mắc ung thư. Tuy nhiên, mức độ tăng này là rất nhỏ và có thể không dễ dàng nhận thấy trong các trường hợp phơi nhiễm bức xạ thấp, nhưng nếu tiếp xúc với bức xạ nhiều lần hoặc với liều bức xạ tích tụ lớn, nguy cơ sẽ tăng lên. Cụ thể, 1 mSv có thể làm tăng khoảng <strong>0.05%</strong> nguy cơ mắc ung thư trong suốt cuộc đời.</p>
+
+  <p style="font-size: 16px;">Điều này có nghĩa là nếu bệnh nhân nhận được một liều bức xạ là 1 mSv từ một xét nghiệm CT, nguy cơ mắc ung thư của bệnh nhân có thể tăng thêm khoảng 0.05% so với mức bình thường. Tuy nhiên, tác động này phụ thuộc vào độ tuổi, giới tính và mô cơ thể, với những người trẻ tuổi hoặc các mô nhạy cảm với bức xạ có nguy cơ cao hơn.</p>
+
+  <h4 style="color: #007BFF; font-size: 22px;">Ví dụ về nguy cơ ung thư từ ca CT não:</h4>
+  <p style="font-size: 16px;">Giả sử một bệnh nhân thực hiện xét nghiệm <strong>CT não</strong>, và liều hiệu dụng tính được là <strong>1.6 mSv</strong> (theo thông số chuẩn của một ca CT não). Để tính toán nguy cơ ung thư từ liều này, chúng ta có thể áp dụng công thức sau:</p>
+
+  <p style="font-size: 20px; background-color: #f4f6f9; padding: 10px; border-radius: 6px; border: 1px solid #007BFF; text-align: center;">
+    Nguy cơ tăng thêm = Liều bức xạ × Tỷ lệ tăng nguy cơ = 1.6 mSv × 0.05% = 0.08%
+  </p>
+
+  <p style="font-size: 16px;">Như vậy, trong trường hợp này, nguy cơ ung thư của bệnh nhân sau khi thực hiện xét nghiệm CT não sẽ tăng thêm khoảng <strong>0.08%</strong> so với mức bình thường. Mặc dù đây là một mức tăng khá nhỏ, nhưng điều quan trọng là liều bức xạ không được tích tụ quá nhiều qua thời gian, đặc biệt đối với những bệnh nhân phải thực hiện nhiều xét nghiệm CT.</p>
+
+  <h4 style="color: #007BFF; font-size: 22px;">Kết luận:</h4>
+  <p style="font-size: 16px;">Mặc dù mỗi xét nghiệm CT đều có một mức liều bức xạ nhất định, việc tính toán <strong>liều hiệu dụng</strong> và theo dõi **nguy cơ ung thư** tiềm ẩn là rất quan trọng trong việc tối ưu hóa việc sử dụng bức xạ trong y tế. Các bác sĩ cần đánh giá kỹ lưỡng giữa <strong>lợi ích chẩn đoán</strong> và <strong>rủi ro bức xạ</strong> để bảo vệ sức khỏe lâu dài của bệnh nhân, đặc biệt đối với những người cần phải chụp CT nhiều lần.</p>
+</section>
+
 
   <header>
     <h1>LIỀU HIỆU DỤNG TRUNG BÌNH TỪ CÁC KỸ THUẬT X QUANG VÀ CT</h1>
