--- a/dosecal/index.html
+++ b/dosecal/index.html
@@ -321,7 +321,7 @@
 <body>
 
 <section style="max-width: 920px; margin: 30px auto; padding: 20px; background-color: #fff; border-radius: 12px; box-shadow: 0 4px 12px rgba(0,0,0,0.1);">
-  <h3 style="text-align: center; color: #007BFF; font-size: 26px;">Ý nghĩa của Liều hiệu dụng trong CT</h3>
+  <h3 style="text-align: center; color: #007BFF; font-size: 26px;">Liều hiệu dụng trong CT</h3>
   
   <p style="font-size: 16px;"><strong>Liều hiệu dụng</strong> (Effective Dose) là một đại lượng dùng để đo lường và đánh giá mức độ nguy hại của bức xạ đối với cơ thể con người sau khi tiếp xúc với bức xạ ion hóa. Nó phản ánh tác động tiềm tàng của bức xạ đến các mô và cơ quan khác nhau trong cơ thể, từ đó giúp ước tính nguy cơ ung thư hay các tác động lâu dài của bức xạ. Liều hiệu dụng tính bằng đơn vị <strong>mSv</strong> (miliSievert), trong đó <strong>1 Sv</strong> tương đương với 1000 mSv.</p>
 
