--- a/dosecal/index.html
+++ b/dosecal/index.html
@@ -162,7 +162,7 @@
     <div id="resultDose"></div>
 
     <!-- Bảng hệ số k -->
-    <h3>Hệ số k cho các vùng cơ thể</h3>
+    <h3>Hệ số k (trọng số mô) cho các vùng cơ thể</h3>
     <table>
       <thead>
         <tr>
