--- a/lunglowdose/index.html
+++ b/lunglowdose/index.html
@@ -418,7 +418,7 @@
 
 <footer style="background-color:#007BFF; color:white; padding: 20px 0; margin-top:40px;">
       <div style="max-width: 1000px; margin: auto; text-align: center;">
-        <p style="margin: 5px 0; font-size: 16px;">© 2025 <strong>LDCT Việt Nam</strong> – Tầm soát Ung thư phổi bằng CT liều thấp</p>
+        <p style="margin: 5px 0; font-size: 16px;">© 2025 <strong>Cộng đồng kỹ thuật viên hình ảnh y học Việt Nam</strong> – Tầm soát Ung thư phổi bằng CT liều thấp</p>
         <p style="margin: 5px 0; font-size: 14px;">Biên soạn bởi nhóm <strong>KTV 3 Miền</strong> | Dành cho đào tạo & tham khảo y khoa</p>
         <p style="margin: 5px 0; font-size: 13px; opacity: 0.8;">Mọi thông tin mang tính hỗ trợ, không thay thế tư vấn chuyên môn của bác sĩ</p>
       </div>
