--- a/dosecal/index.html
+++ b/dosecal/index.html
@@ -321,6 +321,53 @@
 <body>
 
 <section style="max-width: 920px; margin: 30px auto; padding: 20px; background-color: #fff; border-radius: 12px; box-shadow: 0 4px 12px rgba(0,0,0,0.1);">
+  <h3 style="text-align: center; color: #007BFF; font-size: 26px; line-height: 1.8;">Giải thích về DLP (Dose-Length Product) trong chụp CT</h3>
+  
+  <p style="font-size: 16px; text-align: justify; line-height: 1.8;">
+    <strong>DLP</strong> (Dose-Length Product) là một chỉ số quan trọng trong chẩn đoán CT, giúp đo lường tổng lượng bức xạ mà bệnh nhân tiếp nhận trong suốt quá trình chụp cắt lớp vi tính (CT scan). DLP phản ánh tổng bức xạ được sử dụng trong suốt quá trình quét, và nó có thể được tính toán bằng cách nhân <strong>CTDIvol</strong> (Computed Tomography Dose Index Volume) với chiều dài vùng quét (scan length).
+  </p>
+
+  <h4 style="color: #007BFF; font-size: 22px; line-height: 1.8;">Công thức tính DLP:</h4>
+  <p style="font-size: 16px; text-align: justify; line-height: 1.8;">
+    DLP = CTDI<sub>vol</sub> × Chiều dài quét
+  </p>
+
+  <p style="font-size: 16px; text-align: justify; line-height: 1.8;">
+    Trong đó:
+  </p>
+  <ul style="font-size: 16px; text-align: justify; line-height: 1.8;">
+    <li><strong>CTDI<sub>vol</sub></strong>: Liều bức xạ trung bình tại một điểm chuẩn trong thể tích quét (thường là 100 mm). Đơn vị là <strong>mGy</strong> (miliGray).</li>
+    <li><strong>Chiều dài quét</strong>: Là chiều dài của vùng cơ thể mà máy CT quét trong suốt quá trình chụp, đơn vị là <strong>cm</strong>.</li>
+  </ul>
+
+  <h4 style="color: #007BFF; font-size: 22px; line-height: 1.8;">Ý nghĩa của DLP:</h4>
+  <p style="font-size: 16px; text-align: justify; line-height: 1.8;">
+    <strong>DLP</strong> giúp bác sĩ và kỹ thuật viên đánh giá mức độ phơi nhiễm bức xạ của bệnh nhân trong suốt quá trình quét CT. Cùng với **CTDIvol**, DLP cung cấp thông tin về tổng lượng bức xạ mà bệnh nhân tiếp nhận, điều này rất quan trọng trong việc kiểm soát và tối ưu hóa liều bức xạ.
+  </p>
+
+  <h4 style="color: #007BFF; font-size: 22px; line-height: 1.8;">Cách tính DLP trong thực tế:</h4>
+  <p style="font-size: 16px; text-align: justify; line-height: 1.8;">
+    Để tính DLP, bạn cần hai thông số chính: **CTDIvol** và **chiều dài quét**. Sau khi có được các giá trị này từ máy CT, bạn chỉ cần nhân chúng lại để có được DLP. Ví dụ, trong một xét nghiệm CT bụng, nếu **CTDIvol** là **10 mGy** và chiều dài quét là **20 cm**, ta có:
+  </p>
+
+  <p style="font-size: 16px; text-align: justify; line-height: 1.8; font-weight: bold; background-color: #f4f6f9; padding: 10px; border-radius: 6px; border: 1px solid #007BFF; text-align: center;">
+    DLP = 10 mGy × 20 cm = 200 mGy·cm
+  </p>
+
+  <h4 style="color: #007BFF; font-size: 22px; line-height: 1.8;">Tác dụng của DLP trong CT:</h4>
+  <p style="font-size: 16px; text-align: justify; line-height: 1.8;">
+    DLP giúp các bác sĩ kiểm tra và đảm bảo rằng mức độ bức xạ trong quá trình chụp CT không vượt quá mức an toàn cho bệnh nhân. Việc theo dõi DLP giúp tối ưu hóa liều bức xạ trong khi vẫn đảm bảo chất lượng hình ảnh cần thiết cho việc chẩn đoán. Điều này đặc biệt quan trọng đối với các bệnh nhân phải chụp CT nhiều lần.
+  </p>
+
+  <h4 style="color: #007BFF; font-size: 22px; line-height: 1.8;">Tóm tắt:</h4>
+  <p style="font-size: 16px; text-align: justify; line-height: 1.8;">
+    <strong>DLP</strong> là một chỉ số quan trọng trong việc đo lường mức độ bức xạ mà bệnh nhân tiếp nhận trong quá trình chụp CT. Bằng cách theo dõi DLP và điều chỉnh các thông số quét, bác sĩ có thể đảm bảo rằng mức độ bức xạ được tối ưu hóa, bảo vệ sức khỏe lâu dài của bệnh nhân, và giảm thiểu nguy cơ từ bức xạ.
+  </p>
+
+</section>
+
+  
+<section style="max-width: 920px; margin: 30px auto; padding: 20px; background-color: #fff; border-radius: 12px; box-shadow: 0 4px 12px rgba(0,0,0,0.1);">
   <h3 style="text-align: center; color: #007BFF; font-size: 26px;">Liều hiệu dụng trong CT</h3>
   
   <p style="font-size: 16px; text-align: justify; line-height: 1.8;">
