--- a/dosecal/index.html
+++ b/dosecal/index.html
@@ -320,6 +320,53 @@
 </head>
 <body>
 
+<section style="max-width: 920px; margin: 30px auto; padding: 20px; background-color: #fff3cd; border-left: 5px solid #dc3545; border-radius: 12px; box-shadow: 0 4px 12px rgba(0,0,0,0.1); line-height: 1.8;">
+  <h3 style="text-align: center; color: #dc3545; font-size: 26px;">🧬 <strong>CT và nguy cơ ung thư: Cảnh báo từ nghiên cứu JAMA (2025)</strong></h3>
+
+  <p style="font-size: 16px; text-align: justify;">
+    Một nghiên cứu công bố trên <em>JAMA Internal Medicine (4/2025)</em> cho thấy:
+  </p>
+
+  <ul style="font-size: 16px; text-align: justify;">
+    <li><strong>93 triệu lượt chụp CT trong năm 2023 tại Hoa Kỳ</strong> được ước tính gây ra <strong>~103.000 ca ung thư tương lai</strong>, chiếm tới <strong>5% số ung thư mới mỗi năm</strong>.</li>
+    <li><strong>Nguy cơ ung thư tăng cao ở:</strong></li>
+    <ul style="font-size: 16px; text-align: justify;">
+      <li><strong>Trẻ nhỏ</strong> (nguy cơ/scan cao nhất)</li>
+      <li><strong>Người chụp nhiều lần</strong></li>
+      <li><strong>CT bụng-chậu, ngực, cột sống</strong> (liều chiếu cao, nhiều pha)</li>
+    </ul>
+  </ul>
+
+  <hr style="border: 1px solid #dc3545;">
+
+  <h4 style="color: #dc3545; font-size: 22px;">⚠️ <strong>Thông điệp dành cho kỹ thuật viên hình ảnh y học</strong></h4>
+  
+  <ul style="font-size: 16px; text-align: justify;">
+    <li><strong>CT không phải công cụ tầm soát ung thư đại trà.</strong></li>
+    <li><strong>Không có chỉ định rõ ràng → không chụp.</strong></li>
+  </ul>
+
+  <h4 style="color: #dc3545; font-size: 22px;">✅ <strong>Thực hành đúng:</strong></h4>
+  
+  <ul style="font-size: 16px; text-align: justify;">
+    <li>Áp dụng <strong>nguyên tắc ALARA</strong> trong mọi trường hợp.</li>
+    <li><strong>Tối ưu tham số kỹ thuật:</strong> kVp, mAs, pitch, scan length.</li>
+    <li><strong>Hạn chế chụp đa pha</strong> nếu không có giá trị chẩn đoán thêm.</li>
+    <li><strong>Cân nhắc kỹ</strong> ở trẻ em, phụ nữ trẻ, người khỏe mạnh.</li>
+  </ul>
+
+  <hr style="border: 1px solid #dc3545;">
+
+  <p style="font-size: 16px; text-align: center; font-weight: bold;">
+    🧠 <strong>Kỹ thuật đúng – không chỉ cho ảnh đẹp, mà còn cứu bệnh nhân khỏi rủi ro âm thầm từ chính liều chiếu chúng ta tạo ra.</strong>
+  </p>
+
+  <p style="text-align: center;">
+    🔗 <a href="https://jamanetwork.com/journals/jamainternalmedicine/fullarticle/10.1001/jamainternmed.2025.0505" target="_blank" style="color: #007BFF; text-decoration: none;">Xem nghiên cứu gốc tại JAMA</a>
+  </p>
+</section>
+
+  
 <section style="max-width: 920px; margin: 30px auto; padding: 20px; background-color: #fff; border-radius: 12px; box-shadow: 0 4px 12px rgba(0,0,0,0.1);">
   <h3 style="text-align: center; color: #007BFF; font-size: 26px; line-height: 1.8;">Giải thích về DLP (Dose-Length Product) trong chụp CT</h3>
   
