--- a/dosecal/index.html
+++ b/dosecal/index.html
@@ -320,7 +320,7 @@
 </head>
 <body>
 
-<section style="max-width: 920px; margin: 30px auto; padding: 20px; background-color: #fff3cd; border-left: 5px solid #dc3545; border-radius: 12px; box-shadow: 0 4px 12px rgba(0,0,0,0.1); line-height: 1.8;">
+<section style="max-width: 920px; margin: 30px auto; padding: 20px; background-color: #fff3cd; border-left: 5px solid #dc3545; border-radius: 12px; box-shadow: 0 4px 12px rgba(0,0,0,0.1); line-height: 1.8;font-family: 'Roboto', Arial, sans-serif;">
   <h3 style="text-align: center; color: #dc3545; font-size: 26px;">🧬 <strong>CT và nguy cơ ung thư: Cảnh báo từ nghiên cứu JAMA (2025)</strong></h3>
 
   <p style="font-size: 16px; text-align: justify;font-family: 'Roboto', Arial, sans-serif;">
