--- a/dosecal/index.html
+++ b/dosecal/index.html
@@ -203,6 +203,7 @@
 
   </section>
 
+  
   <script>
     function updateK() {
       const bodyRegion = document.getElementById("bodyRegion").value;
@@ -323,6 +324,16 @@
 <section style="max-width: 920px; margin: 30px auto; padding: 20px; background-color: #fff3cd; border-left: 5px solid #dc3545; border-radius: 12px; box-shadow: 0 4px 12px rgba(0,0,0,0.1); line-height: 1.8;font-family: 'Roboto', Arial, sans-serif;">
   <h3 style="text-align: center; color: #dc3545; font-size: 26px;">🧬 <strong> CT và nguy cơ ung thư: Cảnh báo từ nghiên cứu JAMA (2025)</strong></h3>
 
+ <section style="max-width: 1000px; margin: 40px auto;">
+  <h2 style="text-align: center; color: #007BFF;">Minh họa báo cáo liều – Dose Report</h2>
+  <div style="border: 4px solid #007BFF; border-radius: 12px; padding: 10px; background-color: #fdfdfd; box-shadow: 0 4px 10px rgba(0,0,0,0.05);">
+    <img src="https://i.postimg.cc/wxVppmCX/image.png" alt="Dose Report" style="width: 100%; border-radius: 8px;">
+    <p style="margin-top: 10px; font-size: 15px; color: #333;">
+      Hình ảnh minh họa một bảng Dose Report hiển thị sau khi kết thúc quét. Kỹ thuật viên cần lưu ý thông tin CTDI<sub>vol</sub>, DLP, mAs, kV và chỉ số phantom (S = 16cm, L = 32cm) để tính liều hiệu dụng một cách chính xác.
+    </p>
+  </div>
+</section>
+  
   <p style="font-size: 16px; text-align: justify;font-family: Arial;">
     Một nghiên cứu công bố trên <em>JAMA Internal Medicine (4/2025)</em> cho thấy:
   </p>
