--- a/lunglowdose/index.html
+++ b/lunglowdose/index.html
@@ -726,6 +726,7 @@
         <p>© <span id="current-year"></span> <strong>Cộng đồng kỹ thuật viên hình ảnh y học Việt Nam</strong> – Trang thông tin Tầm soát Ung thư phổi bằng CT liều thấp</p>
         <p>Biên soạn bởi nhóm <strong>KTV 3 Miền</strong> | Dành cho mục đích đào tạo & tham khảo y khoa</p>
         <p>Mọi thông tin trên trang chỉ mang tính chất tham khảo, không thay thế cho chẩn đoán và chỉ định của bác sĩ chuyên khoa.</p>
+        <p>Liên hệ: Lê Thanh Trọng - 0944406507</p>
     </footer>
 
     <script>
